# ITIS-3135-Website

./: activity_2.css  activity_2.html  activity_3.html  index.html  pyproject.toml  render_templates.py
accessibility/: Peterson-Activity_Accessibility.css  Peterson-Activity_Accessibility.html
client_project/: catalog.html  contact.html  faq.html  index.html  neighborhoods.html
client_project/styles/: base.css  catalog.css  contact.css  faq.css  index.css
hobby/: index.css  index.html  index.js
itis3135/: activity_2.html  activity_3.html  activity_4.html  activity_5.html  activity_6.html  activity_7.html  activity_8.html  activity_9.html  contract.html  index.html  project_1.html  project_1_outline.html  project_1_review_1.html  project_1_review_2.html  project_1_video.html
itis3135/activity_11/: Peterson-Activity11.html  Peterson-Activity11.js
itis3135/activity_12/: Peterson-Activity12.html  Peterson-Activity12.js
itis3135/activity_13/: Peterson-Activity13.html  Peterson-Activity13.js
itis3135/activity_14/: Peterson-Activity14.html  Peterson-Activity14.js
itis3135/activity_15/: Peterson-Activity15.html  Peterson-Activity15.js
itis3135/data/: jpeter98.json
itis3135/scripts/: activity_5.js  activity_6.js  activity_7.js  activity_8.js  activity_9.js
itis3135/stuff/: INDEX ?.html
itis3135/styles/: activity_5.css  activity_7.css  activity_8.css  activity_9.css  base.css  contract.css  (+1 more)
itis_3135/: activity_2.html  activity_3.html  activity_4.html  activity_5.html  index.html  website_evaluations.html
mobilityautomatic.com/: index.css  index.html
(+25 files in other folders)
